jsExecutor propertyfile and helper added

--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,27 @@
 			<artifactId>selenium-java</artifactId>
 			<version>4.28.0</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>7.8.0</version> <!-- Use the latest stable version -->
-			<scope>test</scope>
+			<version>7.9.0</version> <!-- Use the latest version -->
+			<scope>compile</scope>
 		</dependency>
+
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.5</version>
+				<configuration>
+					<suiteXMLFiles>testng.xml</suiteXMLFiles>
+				</configuration>
+			</plugin>
+
+		</plugins>
+	</build>
 
 </project>
