--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 NewUserName=lakhin12
-NewUserEmail=RKJapani@123.com
+NewUserEmail=RKJapan@123.com
 NewUserPassword=password123
 SignupFirstName=Riotsu
 SignupLastName=Kankichi
